syntax = "proto3";

package com.netty.proto;

option optimize_for = SPEED;
option java_package = "com.netty.proto";
option java_outer_classname = "PersonProto";
option java_multiple_files = true;

service PersonService{
    rpc getRealNameByUserName(MyRequest) returns (MyResponse){}
    rpc getPersonByAge(PersonRequest) returns (stream PersonResponse){}
    rpc getPersonWrapperByAges(stream PersonRequest) returns (PersonResponseList){}
    rpc biTalk(stream StreamRequest) returns (stream StreamResponse){}
}

message StreamRequest{
    string request_info = 1;
}

message StreamResponse{
    string response_info = 1;
}

message PersonResponseList{
    repeated PersonResponse PersonResponseList = 1;
}


message PersonRequest{
    int32 age = 1;
}

message PersonResponse{
    string name = 1;
    int32 age = 2;
    string address = 3;
}

message MyRequest{
    string username = 1;
}

message MyResponse{
    string realName = 2;
}